# openlmr

./: Cargo.toml  README.md  build.sh  default_codeplug.toml  defmt_cat.sh  flash.sh  memory.x
.cargo/: config.toml
.github/workflows/: build.yaml  nightly.yaml
codec2/src/: lib.rs
git2version/: Cargo.toml
git2version/src/: git_helpers.rs  gitinfo.rs  gitinfo_owned.rs  lib.rs  proxy.rs
mipidsi/: Cargo.toml
mipidsi/src/: batch.rs  builder.rs  dcs.rs  graphics.rs  lib.rs  models.rs
mipidsi/src/models/: st7789.rs
opendmr-core/: Cargo.toml  FLASH.md  memory.x
opendmr-core/src/: display_keypad.rs  gpio_display_iface.rs  io.rs  main.rs  radio.rs
openlmr-codeplug/: Cargo.toml
openlmr-codeplug/src/: channel.rs  codeplug.rs  lib.rs
openlmr-core/: Cargo.toml  build.rs
openlmr-core/gui/: app.slint
openlmr-core/src/: at1846s.rs  c6000.rs  channel.rs  dfu.rs  display.rs  event.rs  flash.rs  iface.rs  led.rs  main.rs  playback.rs  ptt.rs  pubsub.rs  ui.rs
openlmr-core/src/gpio_display_iface/: NOTICE  mod.rs
openlmr-core/src/gui/: app.slint
openlmr-core/src/mipidsi/: batch.rs  builder.rs  dcs.rs  error.rs  graphics.rs  mod.rs
openlmr-core/src/mipidsi/dcs/: set_address_mode.rs  set_column_address.rs  set_invert_mode.rs  set_page_address.rs  set_pixel_format.rs  set_scroll_area.rs  set_scroll_start.rs  set_tearing_effect.rs
openlmr-core/src/mipidsi/models/: hx8353.rs  mod.rs
openlmr-program/: Cargo.toml
openlmr-program/src/: main.rs
openlmr-voice/: Cargo.toml  build.rs
openlmr-voice/prompts/: main.toml
openlmr-voice/src/: lib.rs
rtic-crates/rtic/: Cargo.toml
rtic-crates/rtic-macros/src/codegen/: main.rs
stm32f4xx-hal/: Cargo.toml
stm32f4xx-hal/src/: rtc.rs
stm32f4xx-hal/src/fsmc_lcd/: mod.rs  pins.rs
stm32f4xx-hal/src/gpio/alt/: f4.rs
stm32f4xx-hal/src/rcc/: mod.rs  pll.rs
version-proxy/: Cargo.toml
version-proxy/src/: lib.rs
