[package]
name = "openlmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["set-vtor", "set-sp"] }
slint = { version = "1.5.1", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded"] }
num-traits = { version = "0.2.18", default-features = false, features = ["libm"] }
critical-section = "1.1.2"
stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["fsmc_lcd", "stm32f405", "rtic2", "tim2"] }
embedded-alloc = "0.5.1"

rtic = { path = "../rtic-crates/rtic", features=["thumbv7-backend", "rtic-monotonics"]}
panic-halt = "0.2.0"
defmt = "0.3.5"
defmt-rtt = { version = "0.4.0"}
rtic-sync = { path = "../rtic-crates/rtic-sync" }
rtic-monotonics = { version = "1.5.0", features = ["stm32f405vg", "stm32_tim2"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

display-interface = "0.4"
embedded-graphics = "0.8"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4.0"

[build-dependencies]
slint-build = "1.5.1"
