[package]
name = "openlmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["set-vtor", "device", "set-sp"] }
slint = { version = "1.5.1", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded"] }
num-traits = { version = "0.2.18", default-features = false, features = ["libm"] }
critical-section = "1.1.2"
stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["fsmc_lcd", "usb_fs", "stm32f405", "rtic2", "tim2"] }
embedded-alloc = "0.5.1"

rtic = { version = "2.0.1", features=["thumbv7-backend", "rtic-monotonics"]}
defmt = "0.3.5"
defmt-rtt = { version = "0.4.0" }
rtic-sync = { version = "1.0.0" }
rtic-monotonics = { version = "1.5.0", features = ["stm32f405vg", "stm32_tim2"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

display-interface = "0.4"
embedded-graphics = "0.8"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4.0"
usb-device = "0.3.1"
usbd-dfu = "0.4.0"
usbd-serial = "0.2.1"

[build-dependencies]
slint-build = "1.5.1"
